--- a/python/utils/test_html_survey.jinja2
+++ b/python/utils/test_html_survey.jinja2
@@ -1,6 +1,7 @@
 import React, { Component } from 'react';
 import * as Survey from 'survey-react';
 import 'survey-react/survey.css'; // Import the default CSS styles
+import './SurveyStyles.css';
 
 class SurveyComponent extends Component {
   render() {
